# TEL0180_FW

./: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  TEL0180_FW_.c
my_component/: CMakeLists.txt
my_component/inc/: group.h  http.h  i2c_master.h  i2c_slave.h  mqtt.h  rgb.h  spi_ffs.h  wifi.h
my_component/src/: group.c  http.c  i2c_master.c  i2c_slave.c  mqtt.c  rgb.c  spi_ffs.c  wifi.c
